--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: {{.Values.podname}}
 spec:
+  replicas: 2
   selector:
     matchLabels:
       app: {{.Values.podname}}
