--- a/values.yaml
+++ b/values.yaml
@@ -7,3 +7,4 @@ image: imagename:69
 image: /imagename:70/
 image: imagename:71
 image: "imagename:${currentBuild.number}"
+image: "imagename:${currentBuild.number}"
