--- a/values.yaml
+++ b/values.yaml
@@ -8,3 +8,4 @@ image: /imagename:70/
 image: imagename:71
 image: "imagename:${currentBuild.number}"
 image: "imagename:${currentBuild.number}"
+image: imagename: "${currentBuild.number}"
