--- a/values.yaml
+++ b/values.yaml
@@ -11,3 +11,4 @@ image: "imagename:${currentBuild.number}"
 image: imagename: "${currentBuild.number}"
 image: imagename:${currentBuild.number}
 image: imagename:83
+image: /imagename:84/
